# jons-mcp-pdb

./: .gitignore  CLAUDE.md  MCP_PDB_PROPOSAL.md  README.md  claude.json  example_usage.py  mcp_pdb.py  pdb_mcp.py  pdbconfig.json  pdbconfig.json.example  pyproject.toml
.claude/: settings.local.json
.claude/jons-plan/plans/modernize/: claude-progress.txt  plan.md  tasks.json
src/: __init__.py  jons_mcp_pdb.py
src/jons_mcp_pdb/: __init__.py  constants.py  exceptions.py  pdb_client.py  server.py  utils.py
src/jons_mcp_pdb/tools/: __init__.py  breakpoints.py  execution.py  inspection.py  navigation.py  session.py
test_samples/: sample_pdb.py  sample_pytest_debug.py  sample_script.py
tests/: conftest.py  test_integration.py  test_mcp_tools.py  test_pdb_client.py  test_simple.py
tests/samples/: sample_pdb.py  sample_pytest_debug.py  sample_script.py
